Agregado el contenido adicional del blog y una mejor tipografia

--- a/blogpost.html
+++ b/blogpost.html
@@ -15,6 +15,13 @@
                     explicar las cosas increibles que se pueden
                     hacer con ramas
                 </p>
+                <p>
+                    Los blogs son la mejor forma de compartir
+                    informacion y tus ideas. Mucho mas que ir 
+                    a conferencias o salir en youtune. Excepto si eres 
+                    un rockstar. Pero estadisticamente no lo eres...
+                    por ahora.
+                </p>
             </div>
         </div>
     </body>
