--- a/blogpost.html
+++ b/blogpost.html
@@ -17,7 +17,7 @@
                     atractivo e interesante del post
                 </h1>
                 <p>
-                    Y este es el parrafp de inicio donde vamos a 
+                    Y este es el parrafo de inicio donde vamos a 
                     explicar las cosas increibles que se pueden
                     hacer con ramas
                 </p>
