Le puse un nuevo párrafo para extra
le puse otro parrafo para que se vea mas chingon

--- a/blogpost.html
+++ b/blogpost.html
@@ -21,6 +21,7 @@
                     a conferencias o salir en youtune. Excepto si eres 
                     un rockstar. Pero estadisticamente no lo eres...
                     por ahora.</p>
+                <p>Le puese este Texto Siulchg</p>
                 <p>Suscribete y dale like</p>
                 <div id="footer">
                     Hecho con amor por Siul &lt;3
