Agregue una imagen al repositorio

--- a/blogpost.html
+++ b/blogpost.html
@@ -16,6 +16,7 @@
                 <p>Y este es el p&aacute;rrafo de inicio donde vamos a 
                     explicar las cosas incre&iacute;bles que se pueden
                     hacer con ramas</p>
+                <p><img src="imagenes/captura.png" width="100%" /></p>
                 <p>Los blogs son la mejor forma de compartir
                     informacion y tus ideas. Mucho mas que ir 
                     a conferencias o salir en youtune. Excepto si eres 
